@@ -1,5 +1,6 @@
 Version 2.02.85 - 
 ===================================
+  Fix allocation of system_id buffer in volume_group structure.
   Fix buffer allocation in build_dm_uuid().
   Fix readlink usage inside get_primary_dev().
   Use format instance mempool where possible and adequate.
